added weight probability to adaptive n as well as adaptive settings

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       <input type="number" id="nInput" class="setting" min="1" max="15" value="2">
       <br>
       <label>
+        <input type="checkbox" id="toggleAdaptive" class="setting">
+        Adaptive
+      </label><br>
+      <label>
         <input type="checkbox" id="toggleImage" class="setting">
         Image Stimuli
       </label><br>
